--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.17'
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
+    compile 'com.google.android.gms:play-services-maps:+'
 }
