--- a/Android/companionapp/build.gradle
+++ b/Android/companionapp/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.google.android.support:wearable:1.1.0'
+    compile 'com.mcxiaoke.volley:library:1.0.17'
 }
