--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.1.0'
     compile 'com.google.android.gms:play-services-wearable:6.5.87'
+    compile 'com.google.android.gms:play-services-location:+'
     compile 'com.mcxiaoke.volley:library:1.0.17'
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
