--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
     <uses-permission android:name="android.permission.ALLOW_MOCK_LOCATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
 
+    <permission
+        android:name="com.ecs.google.maps.v2.actionbarsherlock.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -64,7 +73,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBPSWRkSd7MKCaprM3l2SAjiFrSLQAsLbw"/>
+            android:value="AIzaSyCtfvQg6Jo1rYapPChCTTiskWhh4UCD9V8"/>
 
         <service android:name=".WearMessageListenerService">
             <intent-filter>
