--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'com.google.android.gms:play-services-maps:8.1.0'
+    compile 'com.google.code.gson:gson:2.2.4'
+
 }
